ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotlisting-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/listings
        pathType: Prefix
        backend:
          service:
            name: listing-service
            port:
              number: 6000
      - path: /api/analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 6001
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
      - path: /metabase
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 3000
